# hexapawn

./: CMakeLists.txt  README.md
include/: engine.hpp
src/: engine.cpp  main.cpp
